cli/tests/snapshot/inputs/errors/trace_not_saturated.ncl
# capture = 'stderr'
# command = ['eval']
%trace% "too few arguments"
